--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1524,6 +1524,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1572,6 +1573,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1620,6 +1622,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1668,6 +1671,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1716,6 +1720,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1764,6 +1769,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1812,6 +1818,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1860,6 +1867,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1908,6 +1916,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1956,6 +1965,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -2004,6 +2014,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 17.06
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -2052,6 +2063,7 @@ jobs:
             options:
               env:
                 - BASE_IMG_RES: "patch_u14_x8664_gce_img"
+                - DOCKER_VER: 18.03
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
