--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -146,6 +146,21 @@ resources:
       sourceName: "drydock/c7scaall"
     seed:
       versionName: master
+      
+  - name: c7ruball_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7ruball
+      branch: master
+
+  - name: c7ruball_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7ruball"
+    seed:
+      versionName: master
 
 jobs:
   - name: c7_x8664_build
@@ -362,7 +377,30 @@ jobs:
     on_success:
       script:
         - *build_ship_assets_on_success
-
+  
+  - name: c7ruball_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    runtime:
+      nodePool: c7_cache
+    steps:
+      - IN: c7ruball_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7ruball_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - RES_REPO: "c7ruball_dd_repo"
+                - IMG_OUT: "c7ruball_dd_img"
+          script:
+            - *build_ship_assets
+      - OUT: c7ruball_dd_img
+    on_success:
+      script:
+        - *build_ship_assets_on_success
 ####
   - name: c7_x8664_tag
     type: runSh
@@ -597,6 +635,32 @@ jobs:
     on_success:
       script:
         - *tag_ship_assets_on_success
+        
+  - name: c7ruball_x8664_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    integrations:
+      - ship_ssh
+    steps:
+      - IN: prod_release
+      - IN: c7ruball_dd_repo
+        switch: off
+      - IN: c7ruball_dd_img
+        switch: off
+      - TASK:
+          name: c7ruball_tag
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "c7ruball_dd_img"
+                - RES_REPO: "c7ruball_dd_repo"
+          script:
+            - *tag_ship_assets
+    on_success:
+      script:
+        - *tag_ship_assets_on_success      
 
 ######################### GCP CentOS 7 Image ##################################
   - name: prep_c7_x8664_gce_img
@@ -612,6 +676,7 @@ jobs:
       - IN: c7golall_dd_img
       - IN: c7cloall_dd_img
       - IN: c7scaall_dd_img
+      - IN: c7ruball_dd_img
       - IN: node_file_pack
       - IN: buildami_repo
         switch: off
@@ -1151,6 +1216,7 @@ jobs:
       - IN: c7golall_dd_img
       - IN: c7cloall_dd_img
       - IN: c7scaall_dd_img
+      - IN: c7ruball_dd_img
       - IN: node_file_pack
       - IN: cexec_file_pack
       - IN: u16reqProc_x8664_build
@@ -1206,6 +1272,7 @@ jobs:
       - IN: c7golall_x8664_tag
       - IN: c7cloall_x8664_tag
       - IN: c7scaall_x8664_tag
+      - IN: c7ruball_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
