--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -161,6 +161,21 @@ resources:
       sourceName: "drydock/c7ruball"
     seed:
       versionName: master
+      
+  - name: c7phpall_dd_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: dry-dock/c7phpall
+      branch: master
+
+  - name: c7phpall_dd_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/c7phpall"
+    seed:
+      versionName: master     
 
 jobs:
   - name: c7_x8664_build
@@ -401,6 +416,31 @@ jobs:
     on_success:
       script:
         - *build_ship_assets_on_success
+        
+  - name: c7phpall_x8664_build
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    runtime:
+      nodePool: c7_cache
+    steps:
+      - IN: c7phpall_dd_repo
+      - IN: c7all_dd_img
+      - TASK:
+          name: c7phpall_build
+          runtime:
+            options:
+              env:
+                - REL_VER: "master"
+                - RES_REPO: "c7phpall_dd_repo"
+                - IMG_OUT: "c7phpall_dd_img"
+          script:
+            - *build_ship_assets
+      - OUT: c7phpall_dd_img
+    on_success:
+      script:
+        - *build_ship_assets_on_success      
+        
 ####
   - name: c7_x8664_tag
     type: runSh
@@ -660,7 +700,34 @@ jobs:
             - *tag_ship_assets
     on_success:
       script:
-        - *tag_ship_assets_on_success      
+        - *tag_ship_assets_on_success   
+        
+     
+  - name: c7phpall_x8664_tag
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    integrations:
+      - ship_ssh
+    steps:
+      - IN: prod_release
+      - IN: c7phpall_dd_repo
+        switch: off
+      - IN: c7phpall_dd_img
+        switch: off
+      - TASK:
+          name: c7phpall_tag
+          runtime:
+            options:
+              env:
+                - RES_VER: "prod_release"
+                - RES_IMG: "c7phpall_dd_img"
+                - RES_REPO: "c7phpall_dd_repo"
+          script:
+            - *tag_ship_assets
+    on_success:
+      script:
+        - *tag_ship_assets_on_success   
 
 ######################### GCP CentOS 7 Image ##################################
   - name: prep_c7_x8664_gce_img
@@ -677,6 +744,7 @@ jobs:
       - IN: c7cloall_dd_img
       - IN: c7scaall_dd_img
       - IN: c7ruball_dd_img
+      - IN: c7phpall_dd_img
       - IN: node_file_pack
       - IN: buildami_repo
         switch: off
@@ -1217,6 +1285,7 @@ jobs:
       - IN: c7cloall_dd_img
       - IN: c7scaall_dd_img
       - IN: c7ruball_dd_img
+      - IN: c7phpall_dd_img
       - IN: node_file_pack
       - IN: cexec_file_pack
       - IN: u16reqProc_x8664_build
@@ -1273,6 +1342,7 @@ jobs:
       - IN: c7cloall_x8664_tag
       - IN: c7scaall_x8664_tag
       - IN: c7ruball_x8664_tag
+      - IN: c7phpall_x8664_tag
       - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
