build v6.10.4 gce images on top of previous v6.10.4 images

--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1297,7 +1297,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.10.4"
           script:
-            - *onetime_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
