--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -146,7 +146,7 @@ resources:
       sourceName: "drydock/c7scaall"
     seed:
       versionName: master
-      
+
   - name: c7ruball_dd_repo
     type: gitRepo
     integration: avinci_gh
@@ -161,7 +161,7 @@ resources:
       sourceName: "drydock/c7ruball"
     seed:
       versionName: master
-      
+
   - name: c7phpall_dd_repo
     type: gitRepo
     integration: avinci_gh
@@ -175,7 +175,7 @@ resources:
     pointer:
       sourceName: "drydock/c7phpall"
     seed:
-      versionName: master     
+      versionName: master
 
 jobs:
   - name: c7_x8664_build
@@ -392,7 +392,7 @@ jobs:
     on_success:
       script:
         - *build_ship_assets_on_success
-  
+
   - name: c7ruball_x8664_build
     type: runSh
     triggerMode: parallel
@@ -416,7 +416,7 @@ jobs:
     on_success:
       script:
         - *build_ship_assets_on_success
-        
+
   - name: c7phpall_x8664_build
     type: runSh
     triggerMode: parallel
@@ -439,8 +439,8 @@ jobs:
       - OUT: c7phpall_dd_img
     on_success:
       script:
-        - *build_ship_assets_on_success      
-        
+        - *build_ship_assets_on_success
+
 ####
   - name: c7_x8664_tag
     type: runSh
@@ -675,7 +675,7 @@ jobs:
     on_success:
       script:
         - *tag_ship_assets_on_success
-        
+
   - name: c7ruball_x8664_tag
     type: runSh
     triggerMode: parallel
@@ -700,9 +700,9 @@ jobs:
             - *tag_ship_assets
     on_success:
       script:
-        - *tag_ship_assets_on_success   
-        
-     
+        - *tag_ship_assets_on_success
+
+
   - name: c7phpall_x8664_tag
     type: runSh
     triggerMode: parallel
@@ -727,7 +727,7 @@ jobs:
             - *tag_ship_assets
     on_success:
       script:
-        - *tag_ship_assets_on_success   
+        - *tag_ship_assets_on_success
 
 ######################### GCP CentOS 7 Image ##################################
   - name: prep_c7_x8664_gce_img
@@ -1257,7 +1257,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.10.4"
           script:
-            - *onetime_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
