--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -2078,7 +2078,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.10.4"
           script:
-            - *onetime_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
