--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -1306,7 +1306,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.11.4"
           script:
-            - *regular_final
+            - *onetime_final
     on_success:
       script:
         - *final_on_success_template
